# AdventOfCode

./: CMakeLists.txt  README.md  puzzle_solver.h  single_input_main.c
2025/: CMakeLists.txt
2025/day1/: CMakeLists.txt  day1.c
2025/day10/: CMakeLists.txt  day10.c  gauss_jordan.c  hmath.h
2025/day11/: CMakeLists.txt  day11.c
2025/day12/: CMakeLists.txt  day12.c  hmath.h  matmath.c
2025/day2/: CMakeLists.txt  day2.c
2025/day3/: CMakeLists.txt  day3.c
2025/day4/: CMakeLists.txt  day4.c
2025/day5/: CMakeLists.txt  day5.c
2025/day6/: CMakeLists.txt  day6.c
2025/day7/: CMakeLists.txt  day7.c
2025/day8/: CMakeLists.txt  day8.c
2025/day9/: CMakeLists.txt  day9.c
2025/day9_unittests/: CMakeLists.txt  day9_unittests.c
